--- a/src/scenes/Product/index.scss
+++ b/src/scenes/Product/index.scss
@@ -9,11 +9,21 @@
     .col {
         padding: 0;
     }
+    .categories-item {
+        margin-bottom: 10px;
+        padding: 5px;
+        border-radius: 10px;
+        &.active {
+            color: $text-primary;
+            background: $text-light;
+        }
+    }
     .product-menu {
         padding: 20px;
         background-color: #8a8a8a;
         color: white;
         height: 100%;
+        overflow: auto;
         .menu-item {
             font-size: 16px;
             margin-bottom: 10px;
@@ -28,12 +38,18 @@
             }
         }
     }
+    .list-product{
+        height: 100vh;
+        overflow: auto;
+        padding: 20px;
+    }
     .product {
         width: 200px;
         height: 300px;
         box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
         padding: 10px;
         margin-right: 20px;
+        margin-bottom: 20px;
         .img-wrapper {
             text-align: center;
             width: 100%;
